<resources>
    <string name="app_name">Base Websocket</string>
    <string name="btnSendJSON">Send JSON</string>
    <string name="btnConnect">Connect</string>
    <string name="btnDesconnect">Desconnect</string>
    <string name="tltSerial">Serial</string>
    <string name="msgAppConnected">Application Connected!</string>
    <string name="msgFailReconnect">Failed to reconnect</string>
    <string name="msgWebSocketConnectionIsNotActive">WebSocket connection is not active!</string>
    <string name="msgDisconnected">Disconnected</string>
    <string name="msgAlreadyDisconnect">Already disconnected</string>
    <string name="msgErrorDisconnecting">Error disconnecting</string>
    <string name="msgAlreadyConnected">Already connected</string>
    <string name="msgConnecting">Connecting...</string>
    <string name="msgErrorConnecting">Error connecting</string>
    <string name="msgConnectionLostTryingToReconnect">Connection lost, trying to reconnect...</string>
    <string name="msgConnectionErrorTryingToReconnect">Connection error, trying to reconnect...</string>
    <string name="btnCleanSerial">Clean</string>
    <string name="txtMensageText">Enter your message</string>
    <string name="msgEmptyField">Empty field! Enter a message</string>
    <string name="msgFailedAfterMultipleAttempts">Failed after multiple attempts</string>
    <string name="tltSETTINGS">SETTINGS:</string>
    <string name="tltConfigureDevice">Configure Device</string>
    <string name="tltWiFiNetworkSSID">Wi-Fi Network (SSID):</string>
    <string name="tltPassword">Password:</string>
    <string name="tltIPAddress">IP Address:</string>
    <string name="tltSubnetMask">Subnet Mask:</string>
    <string name="tltDefaultGateway">Default Gateway:</string>
    <string name="tltDNS">DNS:</string>
    <string name="hntMyWiFiAddress">My Wi-Fi address...</string>
    <string name="btnSaveConfig">Save</string>
    <string name="hntMyWiFiPassword">Password my Wi-Fi...</string>
    <string name="btnSendMessage">Send Message</string>
    <string name="txtDoubtTitle">How to configure the Dry Fila Pro connection to the internet network:\n</string>
    <string name="txtDoubt">"1 - To begin, on the device click on \"SETTINGS\", then click on the Wi-Fi icon and finally click on \"YES\" to confirm. \n \n2 - After the screen to connect to the Wi-Fi network appears, on your smartphone, connect to the Wi-Fi network called \"Dry Fila Pro\" using the password \"adminDFP1\". \n \n3 - Open the application and go to settings and then click on the \"Connect\" button. The button will turn blue when the application connects to the device. \n \n4 - Fill in the fields with the name of your Wi-Fi network and the password\n \n5 - To configure the IP fields:\n \t • In the \"IP Address\" field, use an address available on your local network.\n \t • Keep \"Network Mask\" Subnet\" as 255.255.255.0. \n \t • In the \"Default Gateway\" field, enter the IP address of your modem or router. \n \t • Keep \"DNS\" as 8.8.8.8. \n \n If you have any questions, it is advisable to seek help from an IT professional. "</string>
    <string name="txtConfirmSSID">SSID:</string>
    <string name="txtConfirmPassword">Password:</string>
    <string name="txtConfirmIP">IP:</string>
    <string name="txtConfirmSubNet">Sub-Net:</string>
    <string name="txtConfirmGateway">Gateway:</string>
    <string name="txtConfirmDNS">DNS:</string>
    <string name="tltConfirmation">Confirmation:</string>
    <string name="txtBtnCancel">Cancel</string>
    <string name="txtBtnOk">Ok</string>
    <string name="altFieldSSID">SSID field is empty!</string>
    <string name="altFieldPassword">Password field is empty!</string>
    <string name="altFieldIP">IP Address field is empty!</string>
    <string name="altFieldSubnet">Subnet Mask field is empty!</string>
    <string name="altFieldGateway">Default Gateway field is empty!</string>
    <string name="altFieldDNS">DNS field is empty!</string>
</resources>